--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ Table Of Contents:
 /*****************************************
 Colors:
 - Backgrounds - light gray #f1f9fc
-- Buttons, icons - purple #594cda
+- Buttons, icons - purple #e7622d
 - Buttons, icons - red #eb427e
 - Headings text - black #252c38
 - Body text - dark gray #6b747b
@@ -109,9 +109,9 @@ h6 {
 .btn-solid-reg {
     display: inline-block;
     padding: 1.375rem 2.25rem 1.375rem 2.25rem;
-    border: 1px solid #594cda;
+    border: 1px solid #e7622d;
     border-radius: 32px;
-    background-color: #594cda;
+    background-color: #e7622d;
     color: #ffffff;
     font-weight: 600;
     font-size: 0.875rem;
@@ -121,18 +121,18 @@ h6 {
 }
 
 .btn-solid-reg:hover {
-    border: 1px solid #594cda;
+    border: 1px solid #e7622d;
     background-color: transparent;
-    color: #594cda; /* needs to stay here because of the color property of a tag */
+    color: #e7622d; /* needs to stay here because of the color property of a tag */
     text-decoration: none;
 }
 
 .btn-solid-lg {
     display: inline-block;
     padding: 1.625rem 2.75rem 1.625rem 2.75rem;
-    border: 1px solid #594cda;
+    border: 1px solid #e7622d;
     border-radius: 32px;
-    background-color: #594cda;
+    background-color: #e7622d;
     color: #ffffff;
     font-weight: 600;
     font-size: 0.875rem;
@@ -145,9 +145,9 @@ h6 {
 }
 
 .btn-solid-lg:hover {
-    border: 1px solid #594cda;
+    border: 1px solid #e7622d;
     background-color: transparent;
-    color: #594cda; /* needs to stay here because of the color property of a tag */
+    color: #e7622d; /* needs to stay here because of the color property of a tag */
     text-decoration: none;
 }
 
@@ -234,7 +234,7 @@ h6 {
 }
 
 .list .fas {
-    color: #594cda;
+    color: #e7622d;
     font-size: 0.75rem;
     line-height: 1.625rem;
 }
@@ -351,9 +351,9 @@ input[type="checkbox"] {
     display: inline-block;
     width: 100%;
     height: 3.25rem;
-    border: 1px solid #594cda;
+    border: 1px solid #e7622d;
     border-radius: 32px;
-    background-color: #594cda;
+    background-color: #e7622d;
     color: #252c38;
     font-weight: 600;
     font-size: 0.875rem;
@@ -636,7 +636,7 @@ input[type="checkbox"] {
 }
 
 .lightbox-basic .btn-solid-reg.mfp-close:hover {
-    color: #594cda;
+    color: #e7622d;
 }
 /* end of action Button */
 
